--- a/README
+++ b/README
@@ -28,6 +28,8 @@ cmake -DCMAKE_INSTALL_PREFIX=./ -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=`whi
 [2] Release with debuginfo mode [as default]
 cmake -DCMAKE_INSTALL_PREFIX=$HOME -DCMAKE_C_COMPILER=`which gcc` -DCMAKE_CXX_COMPILER=`which c++` ..
 
+export build_dir=`pwd`
+export LD_LIBRARY_PATH=$build_dir/lib:$LD_LIBRARY_PATH
 #
 # make 
 #
