--- a/只能建立的堆或者栈上的类.md
+++ b/只能建立的堆或者栈上的类.md
@@ -4,23 +4,24 @@
 https://blog.csdn.net/szchtx/article/details/12000867
 https://blog.csdn.net/g5dsk/article/details/4775144
 
-#如果只分配在堆上
+# 如果只分配在堆上
 并不能简单地将构造函数设置为私有，这样会有问题。  
 因为new操作符，需要两步，第一步，将分配内存，第二步，调用构造函数。  
 如果将构造函数设置为私有，则new操作符调用该私有构造函数，会有问题。 
 
-	class OnlyHeapClass {
-	private:??????
-	      OnlyHeapClass()??????{??????}?????
-     ?public :????
-	   ??~OnlyHeapClass()??????{??????}?
-	};???
+
+    class OnlyHeapClass {
+     private:
+      OnlyHeapClass(){}
+    public :
+    	   ~OnlyHeapClass(){}
+	};
 	
-	int main() {????
-	   ??OnlyHeapClass?*pInst?=?new?OnlyHeapClass;??
-	      delete  pInst;???
+	int main() {
+	   OnlyHeapClass *pInst = new OnlyHeapClass;
+	      delete  pInst;
 	}
-	/*编译错误：  new的操作符，对 构造函数的要求是非私有 */??
+	/*编译错误：  new的操作符，对 构造函数的要求是非私有 */
 
 所以唯一合理的方法是，将析构函数设置为私有。  
 原因：     
@@ -30,16 +31,16 @@ https://blog.csdn.net/g5dsk/article/details/4775144
 由于析构函数是私有的，这个时候调用delete 操作符
 
 
-	class?OnlyHeapClass??{
-	public:??????
-	      OnlyHeapClass()??????{??????}?????
-     ?private :????
-	   ??~OnlyHeapClass()??????{??????}?
-	};???
+	class OnlyHeapClass{
+	public:
+	      OnlyHeapClass(){}
+     private :
+	   ~OnlyHeapClass(){}
+	};
 	
-	int?main()??{????
-	   ??OnlyHeapClass?*pInst?=?new?OnlyHeapClass;??
-	     delete  pInst;???
+	int main() {
+	    OnlyHeapClass *pInst = new OnlyHeapClass;
+	     delete  pInst;
 	}
 	/*编译错误：  delete的操作符，对 析构函数是有要求的,检查析构函数的可用性，delete为私有，不可调用
 	 */
@@ -47,40 +48,52 @@ https://blog.csdn.net/g5dsk/article/details/4775144
 	
 合理的方法
 
-	class?OnlyHeapClass??{
-	public:??????
-	      OnlyHeapClass()??????{??????}?????
+	class OnlyHeapClass {
+	public: 
+	      OnlyHeapClass(){}
 	      void destroy {  delete this; }   /*为什么这里可以调用delete*/
-     ?private :????
-	   ??~OnlyHeapClass()??????{??????}?
-	};???
+     private :
+	   ~OnlyHeapClass(){}
+	};
 	
-	int?main()??{????
-	   ??OnlyHeapClass?*pInst?=?new?OnlyHeapClass;??
-	     pInst->destroy();???
+	int main(){
+	   OnlyHeapClass *pInst = new OnlyHeapClass;
+	     pInst->destroy();
 	}
 
 
 上述方法的一个缺点就是，无法解决继承问题。如果A作为其它类的基类，则析构函数通常要设为virtual，然后在子类重写，以实现多态。因此析构函数不能设为private。还好C++提供了第三种访问控制，protected。将析构函数设为protected可以有效解决这个问题，类外无法访问protected成员，子类则可以访问。
-? ? ? ? 另一个问题是，类的使用很不方便，使用new建立对象，却使用destory函数释放对象，而不是使用delete。（使用delete会报错，因为delete对象的指针，会调用对象的析构函数，而析构函数类外不可访问）这种使用方式比较怪异。为了统一，可以将构造函数设为protected，然后提供一个public的static函数来完成构造，这样不使用new，而是使用一个函数来构造，使用一个函数来析构。代码如下，类似于单例模式：
+       另一个问题是，类的使用很不方便，使用new建立对象，却使用destory函数释放对象，而不是使用delete。（使用delete会报错，因为delete对象的指针，会调用对象的析构函数，而析构函数类外不可访问）这种使用方式比较怪异。为了统一，可以将构造函数设为protected，然后提供一个public的static函数来完成构造，这样不使用new，而是使用一个函数来构造，使用一个函数来析构。代码如下，类似于单例模式：
 
-	class?OnlyHeapClass??{
-	public:??????
-	      static ?OnlyHeapClass * create ()
+	class OnlyHeapClass {
+	public: 
+	      static  OnlyHeapClass * create ()
 	      {
 	      return  new OnlyHeapClass()
 	       }
 	      void destroy {  delete this; }   /*为什么这里可以调用delete*/
-     ?protected  :????
-	   ??~OnlyHeapClass()??????{}?
-	    OnlyHeapClass()??????{??????}?
-	};???
+     protected  :
+	   ~OnlyHeapClass() {}
+	    OnlyHeapClass(){}
+	};
 	
 	
-	int?main()??{????
-	   ??OnlyHeapClass?*pInst?=?OnlyHeapClass.create();??
-	     pInst->destroy();???
+	int main(){
+	    OnlyHeapClass *pInst = OnlyHeapClass.create();
+	     pInst->destroy();
 	}
 	
+
+#如何只分配在栈上
+
+	class A  
+	{  
+	private:  
+	    void* operator new(size_t t){}     // 注意函数的第一个参数和返回值都是固定的  
+	    void operator delete(void* ptr){} // 重载了new就需要重载delete  
+	public:  
+	    A(){}  
+	    ~A(){}  
+	};  
 
 
