--- a/堆栈错乱.md
+++ b/堆栈错乱.md
@@ -55,7 +55,8 @@ ebp存有 堆栈内容
 　　gcc有参数: -fstack-protector 和 -fstack-protector-all,强烈建议开启...
 
 以上就是在 bt 无法打印堆栈内容时, 采用另一种方式还原函数调用层级的方式, 希望能对大家定位问题有一定帮助. 另外需要提醒大家的是, 
-#### 在 64 位系统中, 寄存器 esp 变成了 rsp, 寄存器 ebp 变成了 rbp, 寄存器 ip 变成了 rip. 而在 arm 平台中, 寄存器 ebp 则变成了 fp.
+
+    在 64 位系统中, 寄存器 esp 变成了 rsp, 寄存器 ebp 变成了 rbp, 寄存器 ip 变成了 rip. 而在 arm 平台中, 寄存器 ebp 则变成了 fp.
 
 
 #2使用gcc的-finstrument-functions选项进行函数跟踪
@@ -238,6 +239,12 @@ static void func_test(v)
 
 
 
-###addr2line  输出内存地址的相关函数，或者源码信息
+###addr2line  输出内存地址的相关函数，或者源码信息 和gdb 的 info symbol + 内存地址，工具差不多
 追踪出错地址
 https://www.linuxidc.com/Linux/2011-05/35780.htm
+
+
+
+### 
+#ValGrind 
+使用工具检测
