--- a/Document/面试题.md
+++ b/Document/面试题.md
@@ -74,8 +74,15 @@ https://www.jianshu.com/p/73778bddf4c2
 #cpu 内存 硬盘 等等与系统性能调试相关的命令必须熟练掌握，设置修改权限 tcp网络状态查看 各进程状态 抓包相关等相关命令 必须熟练掌握
 
 
+#对端关闭，可读，read 返回 0，表示已经读到文件末尾。
 
- #多线程和多进程的区别
+read返回0的唯一条件是对方gracefully close了socket
+select ＞ 0，表示套接字里有东西，
+read ＝ 0，表示里面的东西是“对方关闭连接”。
+当select出错时，会将接口置为可读又可写。这时就要通过判断select的返回值为-1来区分。
+
+
+# 多线程和多进程的区别
  
  
  （重点 面试官最最关心的一个问题，必须从cpu调度，上下文切换，数据共享，多核cup利用率，资源占用，等等各方面回答，然后有一个问题必须会被问到：哪些东西是一个线程私有的？答案中必须包含寄存器，否则悲催）  
@@ -220,34 +227,50 @@ const float EPSINON = 0.00001;
 
 #volatile的含义。
 变量可能在编译器的控制或监控之外改变，告诉编译器不要优化该变量，如被系统时钟更新的变量
+
+
+
+# override和overload的区别。
+ Overload是重载的意思，Override是覆盖的意思，也就是重写。
+
+    重载Overload：在同一个类中，允许存在一个以上的同名函数，只要他们的参数个数或者参数类型不同即可。
+
+    重载的特点：与返回值类型无关，只看参数列表。
+
+    重写Override表示子类中的方法可以与父类中的某个方法的名称和参数完全相同，通过子类创建的实例对象调用这个方法时，将调用子类中定义的方法，这相当于把父类中定义的那个完全相同的方法给覆盖掉了，这也是面向对象编程的多态的一种表现。子类覆盖父类方法时只能抛出父类的异常或者异常的子类或者父类异常的子集，因为子类可以解决父类的一些问题，但不能比父类有更多的问题。还有，子类方法的访问权限只能比父类的更大，不能更小。如果父类的方法是private类型，则子类中根本不存在覆盖，即子类中和父类的private的同名的方法没有覆盖的关系，因为private的访问权限只限于同一类中，而子类就不会访问到private的方法，所以是子类中增加的一个全新的方法。
+
+    重载overload的特点就是与返回值无关，只看参数列表，所以重载的方法是可以改变返回值类型的。所以，如果两个方法的参数列表完全一样，是不能通过让他们的返回值类型不同来实现重载的。我们可以用反证法来说明这个问题，因为我们有时候调用一个方法时也可以不定义返回结果变量，即不要关心其返回结果，例如，我们调用map.remove(key)方法时，虽然remove方法有返回值，但是我们通常都不会定义接收返回结果的变量，这时候假设该类中有两个名称和参数列表完全相同的方法，仅仅是返回类型不同，java就无法确定编程者倒底是想调用哪个方法了，因为它无法通过返回结果类型来判断。
+
+
 技术类
 ①百度2015校园招聘技术类面试题
 一面（1 hour）：
 1. 面试官从简历里抽了一个较感兴趣的项目，让把项目简单介绍了下，针对项目问了几个技术问题
-2. 介绍Java中垃圾回收机制，程序员平时需要关注这个吗？为什么？请举例说明。
+
 3. 数据库隔离级别介绍、举例说明。
-4. override和overload的区别。
 5. 求二叉树的最大距离（即相距最远的两个叶子节点），写代码。
-6. 两个栈实现一个队列，写代码。
+
 7. 你觉得你的优势是什么？有什么技术薄弱点吗？
 8. 目前手上有offer吗？
 二面（40 minutes）：
 1. 详细介绍研究生期间的小论文项目。
-2. 求二叉树的宽度，先简介思路再写代码。
+
+
 3. Hashmap、Hashtable和cocurrentHashMap的区别，要讲出它们各自的实现原理才行，比如Hashmap的扩容机制、cocurrentHashMap的桶分割原理、多线程安全性。
 4. 进程调度算法，有哪些算法比较难实现？
 5. linux下如何修改进程优先级？（nice命令的使用）。
 6. linux下性能监控命令uptime介绍，平均负载的具体含义是什么？建议看server load概念。
-7. linux下如何调试程序？说到gdb，具体如何调试？如何查看core文件中的堆栈信息等（bt指令）。
+
 三面（1 hour and twenty minutes）：
-1. 打印二叉树两个叶子节点间的路径，写代码（汗，百度这么喜欢问二叉树）。
+
 2. 字符串中第一个只出现一次的字符，如何优化算法使得遍历次数更少？
+
 3. socket编程相关，如果服务器这边调用write写了100个字节的数据，客户端想要获得这个数据，是直接用read系统调用，参数也是100吗？
 4. 百度新闻缓存预算问题：一般为了追求时间性能，都需要缓存一些新闻数据，你怎么计算所需预算？然后申请需要的主机……
 5. 多线程的适用场景是什么？为什么要用多线程？
-6. 是否会go语言
+
 7. 为什么对技术感兴趣，一些相关问题讨论。
-8. 聊北京、谈offer。
+
 ②百度技术类面试题
 1、实现一个函数，对一个正整数n，算得到1需要的最少操作次数。操作规则为：如果n为偶数，将其除以2；如果n为奇数，可以加1或减1；一直处理下去。
 例子：
