--- a/Document/面试题.md
+++ b/Document/面试题.md
@@ -10,7 +10,10 @@ http://note.youdao.com/noteshare?id=accc28c56b127c1c28efa6655b145fe4&sub=8E22308
 
 ##TTL是Time To Live，一般是hup count，每经过一个路由就会被减去一，如果它变成0，包会被丢掉。它的主要目的是防止包在有回路的网络上死转，浪费网络资源。ping和traceroute用到它。
 
-详:TTL是Time To Live，目前是hup count，当包每经过一个路由器它就会被减去一，如果它变成0，路由器就会把包丢掉。IP网络往往带有环(loop)，比如子网A和子网B有两个路由器相连，它就是一个loop。TTL的主要目的是防止包在有回路的网络上死转，因为包的TTL最终后变成0而使得此包从网上消失(此时往往路由器会送一个ICMP包回来，traceroute就是根据这个做的)。ping会送包出去，所以里面有它，但是ping不一定非要不可它。traceroute则是完全因为有它才能成的。ifconfig是用来配置网卡的，netstat -rn 是用来列路由表的，所以都用不着它
+详:TTL是Time To Live，目前是hup count，当包每经过一个路由器它就会被减去一，如果它变成0，路由器就会把包丢掉。IP网络往往带有环(loop)，比如子网A和子网B有两个路由器相连，它就是一个loop。
+
+    TTL的主要目的是防止包在有回路的网络上死转，
+因为包的TTL最终后变成0而使得此包从网上消失(此时往往路由器会送一个ICMP包回来，traceroute就是根据这个做的)。ping会送包出去，所以里面有它，但是ping不一定非要不可它。traceroute则是完全因为有它才能成的。ifconfig是用来配置网卡的，netstat -rn 是用来列路由表的，所以都用不着它
 
 ## struct和union的区别
 struct和union都是由多个不同的数据类型成员组成, 但在任何同一时刻, union中只存放了一个被选中的成员, 而struct的所有成员都存在。
@@ -27,7 +30,6 @@ struct和union都是由多个不同的数据类型成员组成, 但在任何同一时刻, union中只存放了
 #网络编程的一般步骤
 
 对于TCP连接：
-
 1.服务器端1）创建套接字create；2）绑定端口号bind；3）监听连接listen；4）接受连接请求accept，并返回新的套接字；5）用新返回的套接字recv/send；6）关闭套接字。
 
 2.客户端1）创建套接字create; 2）发起建立连接请求connect; 3）发送/接收数据send/recv；4）关闭套接字。
@@ -73,6 +75,17 @@ https://www.jianshu.com/p/73778bddf4c2
 
 #cpu 内存 硬盘 等等与系统性能调试相关的命令必须熟练掌握，设置修改权限 tcp网络状态查看 各进程状态 抓包相关等相关命令 必须熟练掌握
 
+top
+
+df 
+du 
+
+
+free查看内存 
+
+https://www.cnblogs.com/zhuiluoyu/p/6154898.html
+
+/proc/meminfo
 
 #对端关闭，可读，read 返回 0，表示已经读到文件末尾。
 
@@ -83,9 +96,10 @@ read ＝ 0，表示里面的东西是“对方关闭连接”。
 
 
 # 多线程和多进程的区别
- 
- 
- （重点 面试官最最关心的一个问题，必须从cpu调度，上下文切换，数据共享，多核cup利用率，资源占用，等等各方面回答，然后有一个问题必须会被问到：哪些东西是一个线程私有的？答案中必须包含寄存器，否则悲催）  
+
+（重点 面试官最最关心的一个问题，
+必须从cpu调度，上下文切换，数据共享，多核cup利用率，资源占用，等等各方面回答，
+然后有一个问题必须会被问到：哪些东西是一个线程私有的？答案中必须包含寄存器，否则悲催）  
 
 #写一个c程序辨别系统是16位还是32位
 
@@ -345,8 +359,7 @@ n个空间（其中n<1M），存放a到a+n-1的数，位置随机且数字不重复，a为正且未知。现在第
 如何判断一个http请求，一个客户端请求已经结束；如何处理服务器多线程，获得一个http请求后，是如何处理的？返回什么？有没有试过返回图片？服务器给客户端请求时，是用什么函数写？服务器如何获取客户端请求，用什么函数
 2.cv操作是什么函数 cv_init, cv_wait, cv_signal
 3.有一些关键词点击次数的文件，如何输出最多点击的一百个
-4.相交链表，如何找相交点（不能要标记）
-答：第一个头遍历到尾，知道他的长度；第二个头遍历到尾，知道他的长度。这样知道两截链表在交点前的长度，长的先走几步，然后一样长了，再轮流下走，就会相聚，相遇节点就是相交节点
+
 5.有些文件，频繁访问在磁盘里头的，现在要放到内存中了。采用什么策略来决定哪些放到内存中？如果是一些url文件，放在内存后，如何快速的找到某个url的位置，如何快速找到哪些文件太久没人访问了，把他替换出去？
 6.c语言相关：内联函数的好处？非内联函数被调用的过程是怎么样的？int,short,char的struct，这几个数应该怎么放，内存小？怎么防止头文件被include多次？
 7.有没有什么问题想问的
