--- a/Document/面试题.md
+++ b/Document/面试题.md
@@ -21,6 +21,44 @@ struct和union都是由多个不同的数据类型成员组成, 但在任何同一时刻, union中只存放了
 对于union的不同成员赋值, 将会对其它成员重写, 原来成员的值就不存在了, 而对于struct的不同成员赋值是互不影响的。
 
 
+
+##什么是“引用”？声明和使用“引用”要注意哪些问题？
+
+         引用的特性：
+
+                 引用是目标变量的别名，对引用的操作与对变量的操作效果一样。声明引用的时候要必须对其初始化。引用声明完后，相当于目标变量有两个名称，不能  　　 再把引用作为其他变量的别名。
+
+                 引用不是新定义一个变量，它只是表示该引用是目标变量名的一个别名，它本身不是一种数据类型，因此引用不占用存储单元。
+
+                 无法建立数组的引用。因为数组是一个由若干元素组成的集合，无法建立数组的别名。
+
+         引用的作用：
+
+                 作为函数的参数，以前用值传递，现在用指针或引用。
+
+                 传引用和传指针给函数效果一样的。
+
+                 传递引用，内存中没有生成实参副本，是直接对实参操作。如果传递的是值类型，需要在栈上生成副本，如果是对象，还要调用构造函数。
+
+                  指针调用的时候，其实也会形参分配存储单元，且需要用“指针变量名”的形式运算，容易产生错误并且可读性差；调用的时候，需要用变量的地址作为实             参，调用形式不好看。引用没有这些            问题。
+
+                  引用作为返回值最大的好处是：内存中不会产生副本。
+
+                  但是，引用作为返回值注意事项：
+
+                  A：不能返回局部变量的引用。
+
+                  B：不能返回函数内部new的变量。因为引用仅仅是别名，无法释放内存。
+
+                  C: 可以返回类成员的引用，但是最好是const
+
+                  D : 引用和指针一样，可以产生多态的效果。
+
+   总结：    
+
+             A: 引用的使用主要用于函数传参，解决大块数据或对象的问题。
+             B： 用引用传递函数参数，不产生副本，通过const，保证引用传递的安全性。
+             C：比指针的可读性好，
 ## socket在什么情况下可读?
 1. 接收缓冲区有数据，一定可读
 2. 对方正常关闭socket，也是可读 
@@ -136,6 +174,7 @@ size_t ssize_t 32位系统为32位，64位系统为64位。
 写回内存
 这三个阶段中间都可以被中断分离开.
 
+#delete 和 delete []
 
 #进程退出exit，_exit区别即atexit函数
 
