--- a/Document/问题.md
+++ b/Document/问题.md
@@ -1,12 +1,8 @@
-1 linux  按时间查找
-2  定时任务
-3 抓包
  c++
 虚继继承
 模板特化
 偏特化
-lambda 铺货和传参的区别
- extern c的作用
+
 静态链接库和动态链接库的区别
 共享内存的两用实现方式的区别
 类，如何只能分配在堆上，如何只能分配在栈上
@@ -17,14 +13,8 @@ lambda 铺货和传参的区别
 比如 摄像头，传感器，等需要使用各自的进程，相互之间，独立性不影响
 
  
-stl 各个容器 之间 的区别
-queue 和  stack 底层的使用什么实现的，为什么要用这种方式 ，和vector 和list 有有什么区别
 
 
-hash map 和 map之间的区别 ，适用场景
-
-tcp ip
-长连接和短链接的问题
 http是长链接还是短链接
 粘包 问题 如何解决
 https://blog.csdn.net/shenya1314/article/details/73457668
@@ -38,3 +28,11 @@ select和 poll epoll
 
 最大子数组 三种不同复杂度的算法
 https://blog.csdn.net/forDreamYue/article/details/51714404
+
+
+【校招面试】大量面经总结，校招生看过来
+https://www.jianshu.com/p/e88096056e73
+
+
+
+https://www.cnblogs.com/liufei1983/p/7099401.html
