--- a/Document/面试题.md
+++ b/Document/面试题.md
@@ -91,6 +91,12 @@ Client端：create----  sendto/recvfrom----close.
 https://blog.csdn.net/yechaodechuntian/article/details/25429143
 
 
+#找出1-10w中没有出现的两个数字。
+1） 位图，申请10w个bit的空间，每个bit代表一个数字是否出现过。开始时将这10w个bit都初始化为0，表示所有数字都没有出现过。然后依次读入已经打乱循序的数字，并将对应的bit设为1。当处理完所有数字后，根据为0的bit得出没有出现的数字。
+
+2） 首先计算1到10w的和，平方和。然后计算给定数字的和，平方和。两次的到的数字相减，可以得到这两个数字的和，平方和。所以我们有x + y = n x^2 + y^2 = m 解方程可以得到x和y的值。
+
+
 # fork()一子进程程后 父进程癿全局变量能不能使用？？？
 fork后子进程将会拥有父进程的几乎一切资源，父子进程的都各自有自己的全局变量。不能通用，不同于线程。对于线程，各个线程共享全局变量。
 
