cmake ok for multithread

--- a/Document/面试题.md
+++ b/Document/面试题.md
@@ -1,4 +1,7 @@
 
+https://www.cnblogs.com/yjd_hycf_space/p/7495640.html
+C++经典面试题（最全，面中率最高）
+
 
 http://note.youdao.com/noteshare?id=accc28c56b127c1c28efa6655b145fe4&sub=8E22308B2949472DB18D1212D9895176
 
