--- a/Document/不能被继承的类.md
+++ b/Document/不能被继承的类.md
@@ -1,2 +1,37 @@
 #½£Ö¸ 48 
 
+
+
+	class A
+	{
+	
+	public:
+		static A * GetInstance()
+		{
+			return new A();
+		}
+		static void Delete( A * a)
+		{
+			delete a;
+		}
+	private:
+		A(){};
+		~A(){};
+	}
+	
+	
+
+	template <T> class FinalClass
+	{
+		friend T;
+		private:
+		 FinalClass(){};
+		 ~FinalClass(){};
+	};
+	class B :public class FinalClass<B>
+	{
+		public:
+		B(){};
+		~B(){};
+	}
+	
