--- a/Document/基本数据类型.md
+++ b/Document/基本数据类型.md
@@ -6,3 +6,19 @@ c++ primer 2.1.1 基本数据类型
 
 #2 类型转换时的具体处理细节
 #3 
+
+double 比float的位数更多 。float和double没有越界之说，只有精度不够。
+
+
+# 给出float与“零值”比较的 if 语句（假设变量名为var）？？？
+const float EPSINON = 0.00001;
+  if ((x >= - EPSINON) && (x <= EPSINON)
+
+浮点数在内存中的存贮机制和整型数不同，有舍入误差，在计算机中用以近似表示任意某个实数。
+具体的说，这个实数由一个整数或定点数（即尾数）乘以某个基数（计算机中通常是2）的整数次幂得到，这种表示方法类似于基数为10的科学记数法。
+  所以浮点数在运算过成功运算通常伴随着因为无法精确表示而进行的近似或舍入。但是这种设计的好处是可以在固定的长度上存储更大范围的数。
+  例如，一个指数范围为±4的4位十进制浮点数可以用来表示43210，4.321或0.0004321，但是没有足够的精度来表示432.123和43212.3（必须近似为432.1和43210）。当然，实际使用的位数通常远大于4。  
+  所以浮点数不能够判断相等，像 if(x==0)的这样的编码是不总是正确的，我们在判断浮点数相等时，推荐用范围来确定，若x在某一范围内，我们就认为相等，至于范围怎么定义，要看实际情况而已了，float,和double 各有不同
+  所以const float EPSINON = 0.00001;  
+  if ((x >= - EPSINON) && (x <= EPSINON) 这样判断是可取的
+  至于为什么取0.00001，可以自己按实际情况定义
