--- a/Document/现场程序题目.md
+++ b/Document/现场程序题目.md
@@ -5,9 +5,7 @@ https://blog.csdn.net/bcypxl/article/details/12278125
     #define MAX(X,Y)  ( (X)>(Y)?(X):(Y) )
     
 #2 写一个函数指针
-
 	int (*p)(int x,int y)
-	
 	
 #3 完整正确的写出二分查找的算法
 
@@ -73,7 +71,6 @@ https://blog.csdn.net/bcypxl/article/details/12278125
 		
 		Node * cur = pHead
 		Node * pre = NULL;
-	
 		while( cur )
 		{
 			Node * temp = cur->next;
@@ -100,7 +97,7 @@ strcpy会赋值字符串末尾的'\0'的
 	char * MyStrcpy(char * strDest,const char * strSrc)
 	{
 		assert(strDest!=NULL );//保持程序鲁棒性
-		assert( strSrc!=NULL )
+		assert( strSrc!=NULL );
 	    char * strDestCopy=strDest;
 	    //先复制，再判断 ， 实际上已经把最后一个 \0复制进去了，如果自己写 ，需要注意添加 最后一个 \0;
 	    while ((*strDest++=*strSrc++)!='\0');
@@ -119,12 +116,11 @@ strcpy会赋值字符串末尾的'\0'的
 	         return NULL;
 	    char* ret = _Dest;
 	    int i = 0;
-	    for ( i = 0; _Source[i] != '\0'; i++)
+	    for ( ; _Source[i] != '\0'; i++)
 	    {
 	         _Dest[i] = _Source[i];
-		}
+	     }
 		_Dest[i] = '\0';
-		
 		return ret;
 	}
 	
@@ -154,7 +150,7 @@ strcpy会赋值字符串末尾的'\0'的
 	        // 从前向后复制
 	        char *pSrc = src;
 	        char *pDst = dst;
-	        while (*pDst++ = *pSrc++) {
+	        while ( (*pDst++ = *pSrc++) != '\0') {
 	            /* do nothing */
 	        } 
 	    }
@@ -169,10 +165,8 @@ strcpy会赋值字符串末尾的'\0'的
 	 //size_t它是一个与机器相关的unsigned类型，其大小足以保证存储内存中对象的大小。
 	{                                                    
 		//注意形参类型和返回值类型都是void* 而且 src 被const修饰 
-		
 	    char *psrc;
 	    char *pdst;  //定义变量 ，因为地址在使用中会被变化，
-	        
 	    if(NULL == dst || NULL == src)//要注意对传入的形参进行检查
 	    {
 	        return NULL;
@@ -197,15 +191,12 @@ strcpy会赋值字符串末尾的'\0'的
 	            *pdst++ = *psrc++;
 	        }
 	    }
-	        
 	    return dst;
 	}
 
 
 #8  编写类String的构造函数、析构函数和赋值函数，已知类String的原型为
 
-   
-   
 	class MyString
 	{
 	public:
@@ -292,7 +283,55 @@ strcpy会赋值字符串末尾的'\0'的
 
 #9 输入一个表示整数的字符串，把该字符串转换成整数并输出。例如输入字符串"1234"，则输出整数1234。
 
-todo 
+ 	参考  /src/za/Implement.cpp
+
+#10  判断系统是大端还是小端
+
+大端模式：字数据的高字节存储在低地址中，字数据的低字节存放在高地址中。big endian
+小端模式：字数据的高字节存储在高地址中，字数据的低字节存放在低地址中。little endian
+1、直接判断内存的存储情况
+	
+	// 1: Little Endian; 0: Big Endian.
+	int isLittleEndian(void) 
+	{ 
+	    int i = 0x12345678; 
+	    char *c = (char *)&i; 
+	    return ((c[0] == 0x78) && (c[1] == 0x56) && (c[2] == 0x34) && (c[3] == 0x12)); 
+	}
+2、用union方法判断
+
+	typedef union {
+	    int i;
+	    char c;
+	} myUnion;
+	// 1: Little Endian; 0: Big Endian.
+	int isLittleEndian02(void)
+	{
+	    myUnion u;
+	    u.i = 1;
+	    return (u.i == u.c);
+	}
+读取成员c就相当于是读取成员a的低位的第一个字节值。
+小端模式：u.i = 1，则a的最低位字节为1，成员c的位置也是内存的最低位字节，所以u.i等于u.c等于1。
+ 
+ 
+#11  写一个c程序辨别系统是16位还是32位
+
+32位处理器就是一次只能处理32位，也就是4个字节的数据，虚拟地址空间的最大大小是4G，而64位处理一次就能处理64位，即8个字节的数据，最大虚拟地址空间的最大大小是16T。
+
+最明显的是指针大小的变化，32位系统指针是32位，64位系统指针是64位。
+其他的，int都是32位，short都是16位，long 32位系统是32位，64位系统为64位，
+size_t 32位系统为32位，64位系统为64位。
+
+判断方法：
+
+	#include "stdio.h"    
+	int main(int argc,char * argv[])    
+	{    
+	    void* number =  0;    
+	    printf("%d\n",sizeof(&number));    
+	}  
+	
 https://blog.csdn.net/youbang321/article/details/7888138
 
 
