--- a/Document/面试题.md
+++ b/Document/面试题.md
@@ -2,13 +2,12 @@
 https://www.cnblogs.com/yjd_hycf_space/p/7495640.html
 C++¾­µäÃæÊÔÌâ£¨×îÈ«£¬ÃæÖÐÂÊ×î¸ß£©
 
-
 http://note.youdao.com/noteshare?id=accc28c56b127c1c28efa6655b145fe4&sub=8E22308B2949472DB18D1212D9895176
 
 ## ÍøÂçÖÐ£¬Èç¹û¿Í»§¶ËÍ»È»µôÏß»òÕßÖØÆô£¬·þÎñÆ÷¶ËÔõÃ´Ñù²ÅÄÜÁ¢¿ÌÖªµÀ£¿
 ´ð:Èô¿Í»§¶ËµôÏß»òÕßÖØÐÂÆô¶¯£¬·þÎñÆ÷¶Ë»áÊÕµ½¸´Î»ÐÅºÅ£¬Ã¿Ò»ÖÖtcp/ipµÃÊµÏÖ²»Ò»Ñù£¬¿ØÖÆ»úÖÆÒ²²»Ò»Ñù¡£
 
- #·Ç×èÈûconnect£¨£©ÈçºÎÊµÏÖ£¿ £¿£¿
+ # ·Ç×èÈûconnect£¨£©ÈçºÎÊµÏÖ£¿ £¿£¿
 ½«socketÉèÖÃ³Énon-blocking£¬²Ù×÷·½·¨Í¬·Ç×èÈûread()¡¢write();
 
 ##TTLÊÇTime To Live£¬Ò»°ãÊÇhup count£¬Ã¿¾­¹ýÒ»¸öÂ·ÓÉ¾Í»á±»¼õÈ¥Ò»£¬Èç¹ûËü±ä³É0£¬°ü»á±»¶ªµô¡£ËüµÄÖ÷ÒªÄ¿µÄÊÇ·ÀÖ¹°üÔÚÓÐ»ØÂ·µÄÍøÂçÉÏËÀ×ª£¬ÀË·ÑÍøÂç×ÊÔ´¡£pingºÍtracerouteÓÃµ½Ëü¡£
@@ -25,43 +24,6 @@ structºÍunion¶¼ÊÇÓÉ¶à¸ö²»Í¬µÄÊý¾ÝÀàÐÍ³ÉÔ±×é³É, µ«ÔÚÈÎºÎÍ¬Ò»Ê±¿Ì, unionÖÐÖ»´æ·ÅÁË
 
 
 
-##Ê²Ã´ÊÇ¡°ÒýÓÃ¡±£¿ÉùÃ÷ºÍÊ¹ÓÃ¡°ÒýÓÃ¡±Òª×¢ÒâÄÄÐ©ÎÊÌâ£¿
-
-         ÒýÓÃµÄÌØÐÔ£º
-
-                 ÒýÓÃÊÇÄ¿±ê±äÁ¿µÄ±ðÃû£¬¶ÔÒýÓÃµÄ²Ù×÷Óë¶Ô±äÁ¿µÄ²Ù×÷Ð§¹ûÒ»Ñù¡£ÉùÃ÷ÒýÓÃµÄÊ±ºòÒª±ØÐë¶ÔÆä³õÊ¼»¯¡£ÒýÓÃÉùÃ÷Íêºó£¬Ïàµ±ÓÚÄ¿±ê±äÁ¿ÓÐÁ½¸öÃû³Æ£¬²»ÄÜ  ¡¡¡¡ ÔÙ°ÑÒýÓÃ×÷ÎªÆäËû±äÁ¿µÄ±ðÃû¡£
-
-                 ÒýÓÃ²»ÊÇÐÂ¶¨ÒåÒ»¸ö±äÁ¿£¬ËüÖ»ÊÇ±íÊ¾¸ÃÒýÓÃÊÇÄ¿±ê±äÁ¿ÃûµÄÒ»¸ö±ðÃû£¬Ëü±¾Éí²»ÊÇÒ»ÖÖÊý¾ÝÀàÐÍ£¬Òò´ËÒýÓÃ²»Õ¼ÓÃ´æ´¢µ¥Ôª¡£
-
-                 ÎÞ·¨½¨Á¢Êý×éµÄÒýÓÃ¡£ÒòÎªÊý×éÊÇÒ»¸öÓÉÈô¸ÉÔªËØ×é³ÉµÄ¼¯ºÏ£¬ÎÞ·¨½¨Á¢Êý×éµÄ±ðÃû¡£
-
-         ÒýÓÃµÄ×÷ÓÃ£º
-
-                 ×÷Îªº¯ÊýµÄ²ÎÊý£¬ÒÔÇ°ÓÃÖµ´«µÝ£¬ÏÖÔÚÓÃÖ¸Õë»òÒýÓÃ¡£
-
-                 ´«ÒýÓÃºÍ´«Ö¸Õë¸øº¯ÊýÐ§¹ûÒ»ÑùµÄ¡£
-
-                 ´«µÝÒýÓÃ£¬ÄÚ´æÖÐÃ»ÓÐÉú³ÉÊµ²Î¸±±¾£¬ÊÇÖ±½Ó¶ÔÊµ²Î²Ù×÷¡£Èç¹û´«µÝµÄÊÇÖµÀàÐÍ£¬ÐèÒªÔÚÕ»ÉÏÉú³É¸±±¾£¬Èç¹ûÊÇ¶ÔÏó£¬»¹Òªµ÷ÓÃ¹¹Ôìº¯Êý¡£
-
-                  Ö¸Õëµ÷ÓÃµÄÊ±ºò£¬ÆäÊµÒ²»áÐÎ²Î·ÖÅä´æ´¢µ¥Ôª£¬ÇÒÐèÒªÓÃ¡°Ö¸Õë±äÁ¿Ãû¡±µÄÐÎÊ½ÔËËã£¬ÈÝÒ×²úÉú´íÎó²¢ÇÒ¿É¶ÁÐÔ²î£»µ÷ÓÃµÄÊ±ºò£¬ÐèÒªÓÃ±äÁ¿µÄµØÖ·×÷ÎªÊµ             ²Î£¬µ÷ÓÃÐÎÊ½²»ºÃ¿´¡£ÒýÓÃÃ»ÓÐÕâÐ©            ÎÊÌâ¡£
-
-                  ÒýÓÃ×÷Îª·µ»ØÖµ×î´óµÄºÃ´¦ÊÇ£ºÄÚ´æÖÐ²»»á²úÉú¸±±¾¡£
-
-                  µ«ÊÇ£¬ÒýÓÃ×÷Îª·µ»ØÖµ×¢ÒâÊÂÏî£º
-
-                  A£º²»ÄÜ·µ»Ø¾Ö²¿±äÁ¿µÄÒýÓÃ¡£
-
-                  B£º²»ÄÜ·µ»Øº¯ÊýÄÚ²¿newµÄ±äÁ¿¡£ÒòÎªÒýÓÃ½ö½öÊÇ±ðÃû£¬ÎÞ·¨ÊÍ·ÅÄÚ´æ¡£
-
-                  C: ¿ÉÒÔ·µ»ØÀà³ÉÔ±µÄÒýÓÃ£¬µ«ÊÇ×îºÃÊÇconst
-
-                  D : ÒýÓÃºÍÖ¸ÕëÒ»Ñù£¬¿ÉÒÔ²úÉú¶àÌ¬µÄÐ§¹û¡£
-
-   ×Ü½á£º    
-
-             A: ÒýÓÃµÄÊ¹ÓÃÖ÷ÒªÓÃÓÚº¯Êý´«²Î£¬½â¾ö´ó¿éÊý¾Ý»ò¶ÔÏóµÄÎÊÌâ¡£
-             B£º ÓÃÒýÓÃ´«µÝº¯Êý²ÎÊý£¬²»²úÉú¸±±¾£¬Í¨¹ýconst£¬±£Ö¤ÒýÓÃ´«µÝµÄ°²È«ÐÔ¡£
-             C£º±ÈÖ¸ÕëµÄ¿É¶ÁÐÔºÃ£¬
 ## socketÔÚÊ²Ã´Çé¿öÏÂ¿É¶Á?
 1. ½ÓÊÕ»º³åÇøÓÐÊý¾Ý£¬Ò»¶¨¿É¶Á
 2. ¶Ô·½Õý³£¹Ø±Õsocket£¬Ò²ÊÇ¿É¶Á 
@@ -94,42 +56,29 @@ Client¶Ë£ºcreate----  sendto/recvfrom----close.
 https://blog.csdn.net/yechaodechuntian/article/details/25429143
 
 
-#ÕÒ³ö1-10wÖÐÃ»ÓÐ³öÏÖµÄÁ½¸öÊý×Ö¡£
-1£© Î»Í¼£¬ÉêÇë10w¸öbitµÄ¿Õ¼ä£¬Ã¿¸öbit´ú±íÒ»¸öÊý×ÖÊÇ·ñ³öÏÖ¹ý¡£¿ªÊ¼Ê±½«Õâ10w¸öbit¶¼³õÊ¼»¯Îª0£¬±íÊ¾ËùÓÐÊý×Ö¶¼Ã»ÓÐ³öÏÖ¹ý¡£È»ºóÒÀ´Î¶ÁÈëÒÑ¾­´òÂÒÑ­ÐòµÄÊý×Ö£¬²¢½«¶ÔÓ¦µÄbitÉèÎª1¡£µ±´¦ÀíÍêËùÓÐÊý×Öºó£¬¸ù¾ÝÎª0µÄbitµÃ³öÃ»ÓÐ³öÏÖµÄÊý×Ö¡£
 
-2£© Ê×ÏÈ¼ÆËã1µ½10wµÄºÍ£¬Æ½·½ºÍ¡£È»ºó¼ÆËã¸ø¶¨Êý×ÖµÄºÍ£¬Æ½·½ºÍ¡£Á½´ÎµÄµ½µÄÊý×ÖÏà¼õ£¬¿ÉÒÔµÃµ½ÕâÁ½¸öÊý×ÖµÄºÍ£¬Æ½·½ºÍ¡£ËùÒÔÎÒÃÇÓÐx + y = n x^2 + y^2 = m ½â·½³Ì¿ÉÒÔµÃµ½xºÍyµÄÖµ¡£
-
-
-# fork()Ò»×Ó½ø³Ì³Ìºó ¸¸½ø³Ì°mÈ«¾Ö±äÁ¿ÄÜ²»ÄÜÊ¹ÓÃ£¿£¿£¿
-forkºó×Ó½ø³Ì½«»áÓµÓÐ¸¸½ø³ÌµÄ¼¸ºõÒ»ÇÐ×ÊÔ´£¬¸¸×Ó½ø³ÌµÄ¶¼¸÷×ÔÓÐ×Ô¼ºµÄÈ«¾Ö±äÁ¿¡£²»ÄÜÍ¨ÓÃ£¬²»Í¬ÓÚÏß³Ì¡£¶ÔÓÚÏß³Ì£¬¸÷¸öÏß³Ì¹²ÏíÈ«¾Ö±äÁ¿¡£
+# fork()Ò»×Ó½ø³Ì³Ìºó ¸¸½ø³ÌµÄÈ«¾Ö±äÁ¿ÄÜ²»ÄÜÊ¹ÓÃ£¿£¿£¿
+forkºó×Ó½ø³Ì½«»áÓµÓÐ¸¸½ø³ÌµÄ¼¸ºõÒ»ÇÐ×ÊÔ´£¬¸¸×Ó½ø³ÌµÄ¶¼¸÷×ÔÓÐ×Ô¼ºµÄÈ«¾Ö±äÁ¿¡£
+²»ÄÜÍ¨ÓÃ£¬²»Í¬ÓÚÏß³Ì¡£¶ÔÓÚÏß³Ì£¬¸÷¸öÏß³Ì¹²ÏíÈ«¾Ö±äÁ¿¡£
 
 # constµÄº¬Òå¼°ÊµÏÖ»úÖÆ£¬±ÈÈç£ºconst int i,ÊÇÔõÃ´×öµ½iÖ»¿É¶ÁµÄ£¿
 http://blog.csdn.net/fycy2010/article/details/48199951
  constÖ¸Ê¾¶ÔÏóÎª³£Á¿£¬Ö»¶Á¡£
-ÊµÏÖ»úÖÆ£ºÕâÐ©ÔÚ±àÒëÆÚ¼äÍê³É£¬¶ÔÓÚÄÚÖÃÀàÐÍ£¬Èçint£¬ ±àÒëÆ÷¿ÉÄÜÊ¹ÓÃ³£ÊýÖ±½ÓÌæ»»µô¶Ô´Ë±äÁ¿µÄÒýÓÃ¡£¶ø¶ÔÓÚ½á¹¹Ìå²»Ò»¶¨¡£
+ÊµÏÖ»úÖÆ£ºÕâÐ©ÔÚ±àÒëÆÚ¼äÍê³É£¬¶ÔÓÚÄÚÖÃÀàÐÍ£¬Èçint£¬ ±àÒëÆ÷¿ÉÄÜÊ¹ÓÃ³£ÊýÖ±½ÓÌæ»»µô¶Ô´Ë±äÁ¿µÄÒýÓÃ¡£
+¶ø¶ÔÓÚ½á¹¹Ìå²»Ò»¶¨¡£
 ¿´ÏÂÃæµÄÀý×Ó£º
+
 #offsetof
 https://zh.wikipedia.org/wiki/Offsetof
 http://xiva.iteye.com/blog/1176115
 https://www.jianshu.com/p/73778bddf4c2
 
-#100ÒÚ¸öÊý£¬Çó×î´óµÄ1Íò¸öÊý£¬²¢Ëµ³öËã·¨µÄÊ±¼ä¸´ÔÓ¶È¡£
-ÓÃÐ¡¸ù¶ÑÀ´ÊµÏÖ¡£×¢ÒâÊÇÐ¡¸ù¶Ñ£¬
-¶ÁÈë1Íò¸öÊý£¬È»ºó×ö
-Ê±¼ä¸´ÔÓ¶ÈÊÇO£¨NlogK£©
-
-##Ð¡¸ù¶Ñ ´ó¸ù¶Ñ
-
 #cpu ÄÚ´æ Ó²ÅÌ µÈµÈÓëÏµÍ³ÐÔÄÜµ÷ÊÔÏà¹ØµÄÃüÁî±ØÐëÊìÁ·ÕÆÎÕ£¬ÉèÖÃÐÞ¸ÄÈ¨ÏÞ tcpÍøÂç×´Ì¬²é¿´ ¸÷½ø³Ì×´Ì¬ ×¥°üÏà¹ØµÈÏà¹ØÃüÁî ±ØÐëÊìÁ·ÕÆÎÕ
 
 top
-
 df 
 du 
-
-
 free²é¿´ÄÚ´æ 
-
 https://www.cnblogs.com/zhuiluoyu/p/6154898.html
 
 /proc/meminfo
@@ -148,36 +97,10 @@ read £½ 0£¬±íÊ¾ÀïÃæµÄ¶«Î÷ÊÇ¡°¶Ô·½¹Ø±ÕÁ¬½Ó¡±¡£
 ±ØÐë´Ócpuµ÷¶È£¬ÉÏÏÂÎÄÇÐ»»£¬Êý¾Ý¹²Ïí£¬¶àºËcupÀûÓÃÂÊ£¬×ÊÔ´Õ¼ÓÃ£¬µÈµÈ¸÷·½Ãæ»Ø´ð£¬
 È»ºóÓÐÒ»¸öÎÊÌâ±ØÐë»á±»ÎÊµ½£ºÄÄÐ©¶«Î÷ÊÇÒ»¸öÏß³ÌË½ÓÐµÄ£¿´ð°¸ÖÐ±ØÐë°üº¬¼Ä´æÆ÷£¬·ñÔò±¯´ß£©  
 
-#Ð´Ò»¸öc³ÌÐò±æ±ðÏµÍ³ÊÇ16Î»»¹ÊÇ32Î»
-
-
-2Î»´¦ÀíÆ÷¾ÍÊÇÒ»´ÎÖ»ÄÜ´¦Àí32Î»£¬Ò²¾ÍÊÇ4¸ö×Ö½ÚµÄÊý¾Ý£¬ÐéÄâµØÖ·¿Õ¼äµÄ×î´ó´óÐ¡ÊÇ4G£¬¶ø64Î»´¦ÀíÒ»´Î¾ÍÄÜ´¦Àí64Î»£¬¼´8¸ö×Ö½ÚµÄÊý¾Ý£¬×î´óÐéÄâµØÖ·¿Õ¼äµÄ×î´ó´óÐ¡ÊÇ
-
-16T¡£
-
-×îÃ÷ÏÔµÄÊÇÖ¸Õë´óÐ¡µÄ±ä»¯£¬32Î»ÏµÍ³Ö¸ÕëÊÇ32Î»£¬64Î»ÏµÍ³Ö¸ÕëÊÇ64Î»¡£
-ÆäËûµÄ£¬int¶¼ÊÇ32Î»£¬short¶¼ÊÇ16Î»£¬long 32Î»ÏµÍ³ÊÇ32Î»£¬64Î»ÏµÍ³Îª64Î»£¬
-size_t ssize_t 32Î»ÏµÍ³Îª32Î»£¬64Î»ÏµÍ³Îª64Î»¡£
-
-
-ÅÐ¶Ï·½·¨£º
-
-
-
-	#include "stdio.h"    
-	    
-	int main(int argc,char * argv[])    
-	{    
-	    void* number =  0;    
-	    printf("%d\n",sizeof(&number));    
-	}  
-
-
 
 #i++ÊÇ·ñÔ­×Ó²Ù×÷£¿²¢½âÊÍÎªÊ²Ã´£¿
 
 1.i++·ÖÎªÈý¸ö½×¶Î£º
-
 ÄÚ´æµ½¼Ä´æÆ÷
 ¼Ä´æÆ÷×ÔÔö
 Ð´»ØÄÚ´æ
@@ -193,24 +116,6 @@ https://www.cnblogs.com/mickole/p/3186606.html
 
 #LinuxÄÚ´æ¹ÜÀí
 https://blog.csdn.net/hustyangju/article/details/46330259
-#ÈçºÎÊµÏÖÊØ»¤½ø³Ì£¿
-https://blog.csdn.net/qq_26499321/article/details/72724173
-ÊØ»¤½ø³ÌÖ®±à³Ì¹æÔò 
-£¨1£©Ê×ÏÈÒª×öµÄÊÇµ÷ÓÃumask½«ÎÄ¼þÄ£Ê½´´½¨ÆÁ±Î×ÖÉèÖÃÎª0¡£ 
-¡¡¡¡ÎÄ¼þÈ¨ÏÞÑÚÂë£ºÊÇÖ¸ÆÁ±ÎµôÎÄ¼þÈ¨ÏÞÖÐµÄ¶ÔÓ¦Î»¡£ÀýÈç£¬ÓÐ¸öÎÄ¼þÈ¨ÏÞÑÚÂëÊÇ050£¬Ëü¾ÍÆÁ±ÎÁËÎÄ¼þ×éÓµÓÐÕßµÄ¿É¶ÁÓë¿ÉÖ´ÐÐÈ¨ÏÞ£¨¶ÔÓ¦¶þ½øÖÆÎª£¬rwx, 101£©¡£ÓÉÓÚforkº¯Êý´´½¨µÄ×Ó½ø³Ì¼Ì³ÐÁË¸¸½ø³ÌµÄÎÄ¼þÈ¨ÏÞÑÚÂë£¬Õâ¾Í¸ø×Ó½ø³ÌÊ¹ÓÃÎÄ¼þ´øÀ´ÁËÖî¶àµÄÂé·³¡£Òò´Ë£¬°ÑÎÄ¼þÈ¨ÏÞÑÚÂëÉèÖÃÎª0£¨¼´£¬²»ÆÁ±ÎÈÎºÎÈ¨ÏÞ£©£¬¿ÉÒÔÔöÇ¿¸ÃÊØ»¤½ø³ÌµÄÁé»îÐÔ¡£ÉèÖÃÎÄ¼þÈ¨ÏÞÑÚÂëµÄº¯ÊýÊÇumask¡£Í¨³£µÄÊ¹ÓÃ·½·¨Îªumask(0)¡£
-
-£¨2£©µ÷ÓÃfork£¬È»ºóÊ¹¸¸½ø³ÌÍË³ö£¨exit£©¡£if(pid=fork()) exit(0);
-
-£¨3£©µ÷ÓÃsetsidÒÔ´´½¨Ò»¸öÐÂ»á»°£¬ÍÑÀë¿ØÖÆÖÕ¶ËºÍ½ø³Ì×é¡£setsidº¯Êý×÷ÓÃ£ºÓÃÓÚ´´½¨Ò»¸öÐÂµÄ»á»°£¬²¢µ£ÈÎ¸Ã»á»°×éµÄ×é³¤¡£ 
-
-¡¡¡¡µ÷ÓÃsetsidÓÐ3¸ö×÷ÓÃ£º(a) ÈÃ½ø³Ì°ÚÍÑÔ­»á»°µÄ¿ØÖÆ£»(b) ÈÃ½ø³Ì°ÚÍÑÔ­½ø³Ì×éµÄ¿ØÖÆ£»(c) ÈÃ½ø³Ì°ÚÍÑÔ­¿ØÖÆÖÕ¶ËµÄ¿ØÖÆ£» setsid() 
-¡¡¡¡Ê¹ÓÃsetsidº¯ÊýµÄÄ¿µÄ£ºÓÉÓÚ´´½¨ÊØ»¤½ø³ÌµÄµÚÒ»²½µ÷ÓÃÁËforkº¯ÊýÀ´´´½¨×Ó½ø³ÌÔÙ½«¸¸½ø³ÌÍË³ö¡£ÓÉÓÚÔÚµ÷ÓÃforkº¯ÊýÊ±£¬×Ó½ø³Ì¿½±´ÁË¸¸½ø³ÌµÄ»á»°ÆÚ¡¢½ø³Ì×é¡¢¿ØÖÆÖÕ¶ËµÈ£¬ËäÈ»¸¸½ø³ÌÍË³öÁË£¬µ«»á»°ÆÚ¡¢½ø³Ì×é¡¢¿ØÖÆÖÕ¶ËµÈ²¢Ã»ÓÐ¸Ä±ä£¬Òò´Ë£¬Õâ»¹²»ÊÇÕæÕýÒâÒåÉÏµÄ¶ÀÁ¢¿ªÁË¡£Ê¹ÓÃsetsidº¯Êýºó£¬ÄÜ¹»Ê¹½ø³ÌÍêÈ«¶ÀÁ¢³öÀ´£¬´Ó¶ø°ÚÍÑÆäËû½ø³ÌµÄ¿ØÖÆ¡£
-
-£¨4£©½«µ±Ç°¹¤×÷Ä¿Â¼¸ü¸ÄÎª¸ùÄ¿Â¼¡£#define NOFILE 256 for(i=0;i<NOFILE;i++) close(i);
-
-£¨5£©¹Ø±Õ²»ÔÙÐèÒªµÄÎÄ¼þÃèÊö·û¡£ÕâÊ¹ÊØ»¤½ø³Ì²»ÔÙ³ÖÓÐ´ÓÆä¸¸½ø³Ì¼Ì³ÐÀ´µÄÄ³Ð©ÎÄ¼þÃèÊö·û£¨¸¸½ø³Ì¿ÉÄÜÊÇshell½ø³Ì£¬»òÄ³¸öÆäËû½ø³Ì£©¡£
-
-£¨6£©Ä³Ð©ÊØ»¤½ø³Ì´ò¿ª/dev/nullÊ¹Æä¾ßÓÐÎÄ¼þÃèÊö·û0¡¢1ºÍ2£¬ÕâÑù£¬ÈÎºÎÒ»¸öÊÔÍ¼¶Á±ê×¼ÊäÈë¡¢Ð´±ê×¼Êä³öºÍ±ê×¼³ö´íµÄ¿âÀý³Ì¶¼²»»á²úÉúÈÎºÎÐ§¹û¡£ÒòÎªÊØ»¤½ø³Ì²¢²»ÓëÖÕ¶ËÉè±¸Ïà¹ØÁª£¬ËùÒÔ²»ÄÜÔÚÖÕ¶ËÉè±¸ÉÏÏÔÊ¾ÆäÊä³ö£¬Ò²ÎÞ´¦´Ó½»»¥Ê½ÓÃ»§ÄÇÀï½ÓÊÜÊäÈë¡£
 
 
 #²»ÓÃµÚÈý¸ö±äÁ¿£¬Ö±½Ó½»»»Á½¸ö±äÁ¿µÄÖµ
@@ -222,8 +127,6 @@ b=a-b;
 a=a-b;
 Êä³öa,b¿ÉÒÔ·¢ÏÖÁ½ÖµÒÑ¾­½»»»
 
- 
-
 ·½·¨¶þ£º
 var a=1;
 var b=2;
@@ -232,33 +135,6 @@ b=a^b;
 a=a^b;
 Êä³öa,b¿ÉÒÔ·¢ÏÖÁ½ÖµÒÑ¾­½»»»
 
-# ÅÐ¶ÏÏµÍ³ÊÇ´ó¶Ë»¹ÊÇÐ¡¶Ë
-´ó¶ËÄ£Ê½£º×ÖÊý¾ÝµÄ¸ß×Ö½Ú´æ´¢ÔÚµÍµØÖ·ÖÐ£¬×ÖÊý¾ÝµÄµÍ×Ö½Ú´æ·ÅÔÚ¸ßµØÖ·ÖÐ¡£big endian
-Ð¡¶ËÄ£Ê½£º×ÖÊý¾ÝµÄ¸ß×Ö½Ú´æ´¢ÔÚ¸ßµØÖ·ÖÐ£¬×ÖÊý¾ÝµÄµÍ×Ö½Ú´æ·ÅÔÚµÍµØÖ·ÖÐ¡£little endian
-1¡¢Ö±½ÓÅÐ¶ÏÄÚ´æµÄ´æ´¢Çé¿ö
-	
-	// 1: Little Endian; 0: Big Endian.
-	int isLittleEndian(void) 
-	{ 
-	    int i = 0x12345678; 
-	    char *c = (char *)&i; 
-	    return ((c[0] == 0x78) && (c[1] == 0x56) && (c[2] == 0x34) && (c[3] == 0x12)); 
-	}
-2¡¢ÓÃunion·½·¨ÅÐ¶Ï
-
-	typedef union {
-	    int i;
-	    char c;
-	} myUnion;
-	// 1: Little Endian; 0: Big Endian.
-	int isLittleEndian02(void)
-	{
-	    myUnion u;
-	    u.i = 1;
-	    return (u.i == u.c);
-	}
-¶ÁÈ¡³ÉÔ±c¾ÍÏàµ±ÓÚÊÇ¶ÁÈ¡³ÉÔ±aµÄµÍÎ»µÄµÚÒ»¸ö×Ö½ÚÖµ¡£
-Ð¡¶ËÄ£Ê½£ºu.i = 1£¬ÔòaµÄ×îµÍÎ»×Ö½ÚÎª1£¬³ÉÔ±cµÄÎ»ÖÃÒ²ÊÇÄÚ´æµÄ×îµÍÎ»×Ö½Ú£¬ËùÒÔu.iµÈÓÚu.cµÈÓÚ1¡£
 
 #Ãæ¶Ô¶ÔÏó±à³ÌµÄ Èý¸ö»ù±¾ÌØÕ÷
 
@@ -270,26 +146,10 @@ selectµ½¶ÁÊÂ¼þ£¬µ«ÊÇ¶Áµ½µÄÊý¾ÝÁ¿Îª0£¬ËµÃ÷¶Ô·½ÒÑ¾­¹Ø±ÕÁËsocketµÄ¶Á¶Ë¡£±¾¶Ë¹Ø±Õ¶Á¼
 
 µ±select³ö´íÊ±£¬»á½«½Ó¿ÚÖÃÎª¿É¶ÁÓÖ¿ÉÐ´¡£ÕâÊ±¾ÍÒªÍ¨¹ýÅÐ¶ÏselectµÄ·µ»ØÖµÎª-1À´Çø·Ö¡£
 
-#  ¸ø³öfloatÓë¡°ÁãÖµ¡±±È½ÏµÄ if Óï¾ä£¨¼ÙÉè±äÁ¿ÃûÎªvar£©£¿£¿£¿
-const float EPSINON = 0.00001;
-  if ((x >= - EPSINON) && (x <= EPSINON)
 
-¸¡µãÊýÔÚÄÚ´æÖÐµÄ´æÖü»úÖÆºÍÕûÐÍÊý²»Í¬£¬ÓÐÉáÈëÎó²î£¬ÔÚ¼ÆËã»úÖÐÓÃÒÔ½üËÆ±íÊ¾ÈÎÒâÄ³¸öÊµÊý¡£
-¾ßÌåµÄËµ£¬Õâ¸öÊµÊýÓÉÒ»¸öÕûÊý»ò¶¨µãÊý£¨¼´Î²Êý£©³ËÒÔÄ³¸ö»ùÊý£¨¼ÆËã»úÖÐÍ¨³£ÊÇ2£©µÄÕûÊý´ÎÃÝµÃµ½£¬ÕâÖÖ±íÊ¾·½·¨ÀàËÆÓÚ»ùÊýÎª10µÄ¿ÆÑ§¼ÇÊý·¨¡£
-  ËùÒÔ¸¡µãÊýÔÚÔËËã¹ý³É¹¦ÔËËãÍ¨³£°éËæ×ÅÒòÎªÎÞ·¨¾«È·±íÊ¾¶ø½øÐÐµÄ½üËÆ»òÉáÈë¡£µ«ÊÇÕâÖÖÉè¼ÆµÄºÃ´¦ÊÇ¿ÉÒÔÔÚ¹Ì¶¨µÄ³¤¶ÈÉÏ´æ´¢¸ü´ó·¶Î§µÄÊý¡£
-  ÀýÈç£¬Ò»¸öÖ¸Êý·¶Î§Îª¡À4µÄ4Î»Ê®½øÖÆ¸¡µãÊý¿ÉÒÔÓÃÀ´±íÊ¾43210£¬4.321»ò0.0004321£¬µ«ÊÇÃ»ÓÐ×ã¹»µÄ¾«¶ÈÀ´±íÊ¾432.123ºÍ43212.3£¨±ØÐë½üËÆÎª432.1ºÍ43210£©¡£µ±È»£¬Êµ¼ÊÊ¹ÓÃµÄÎ»ÊýÍ¨³£Ô¶´óÓÚ4¡£  
-  ËùÒÔ¸¡µãÊý²»ÄÜ¹»ÅÐ¶ÏÏàµÈ£¬Ïñ if(x==0)µÄÕâÑùµÄ±àÂëÊÇ²»×ÜÊÇÕýÈ·µÄ£¬ÎÒÃÇÔÚÅÐ¶Ï¸¡µãÊýÏàµÈÊ±£¬ÍÆ¼öÓÃ·¶Î§À´È·¶¨£¬ÈôxÔÚÄ³Ò»·¶Î§ÄÚ£¬ÎÒÃÇ¾ÍÈÏÎªÏàµÈ£¬ÖÁÓÚ·¶Î§ÔõÃ´¶¨Òå£¬Òª¿´Êµ¼ÊÇé¿ö¶øÒÑÁË£¬float,ºÍdouble ¸÷ÓÐ²»Í¬
-  ËùÒÔconst float EPSINON = 0.00001;  
-  if ((x >= - EPSINON) && (x <= EPSINON) ÕâÑùÅÐ¶ÏÊÇ¿ÉÈ¡µÄ
-  ÖÁÓÚÎªÊ²Ã´È¡0.00001£¬¿ÉÒÔ×Ô¼º°´Êµ¼ÊÇé¿ö¶¨Òå
-
-#ÓÐÇ§Íò¸östringÔÚÄÚ´æÔõÃ´¸ßËÙ²éÕÒ£¬²åÈëºÍÉ¾³ý£¿£¿£¿
-¶ÔÇ§Íò¸östring×öhash£¬¿ÉÒÔÊµÏÖ¸ßËÙ²éÕÒ£¬ÕÒµ½ÁË£¬²åÈëºÍÉ¾³ý¾ÍºÜ·½±ãÁË¡£
-¹Ø¼üÊÇÈçºÎ×öhash£¬¶Ôstring×öhash£¬Òª¼õÉÙÅö×²ÆµÂÊ¡£
 
 #volatileµÄº¬Òå¡£
 ±äÁ¿¿ÉÄÜÔÚ±àÒëÆ÷µÄ¿ØÖÆ»ò¼à¿ØÖ®Íâ¸Ä±ä£¬¸æËß±àÒëÆ÷²»ÒªÓÅ»¯¸Ã±äÁ¿£¬Èç±»ÏµÍ³Ê±ÖÓ¸üÐÂµÄ±äÁ¿
-
 
 
 # overrideºÍoverloadµÄÇø±ð¡£
@@ -307,17 +167,11 @@ const float EPSINON = 0.00001;
 ¼¼ÊõÀà
 ¢Ù°Ù¶È2015Ð£Ô°ÕÐÆ¸¼¼ÊõÀàÃæÊÔÌâ
 Ò»Ãæ£¨1 hour£©£º
-1. ÃæÊÔ¹Ù´Ó¼òÀúÀï³éÁËÒ»¸ö½Ï¸ÐÐËÈ¤µÄÏîÄ¿£¬ÈÃ°ÑÏîÄ¿¼òµ¥½éÉÜÁËÏÂ£¬Õë¶ÔÏîÄ¿ÎÊÁË¼¸¸ö¼¼ÊõÎÊÌâ
-
 3. Êý¾Ý¿â¸ôÀë¼¶±ð½éÉÜ¡¢¾ÙÀýËµÃ÷¡£
 5. Çó¶þ²æÊ÷µÄ×î´ó¾àÀë£¨¼´Ïà¾à×îÔ¶µÄÁ½¸öÒ¶×Ó½Úµã£©£¬Ð´´úÂë¡£
-
-7. Äã¾õµÃÄãµÄÓÅÊÆÊÇÊ²Ã´£¿ÓÐÊ²Ã´¼¼Êõ±¡ÈõµãÂð£¿
 8. Ä¿Ç°ÊÖÉÏÓÐofferÂð£¿
 ¶þÃæ£¨40 minutes£©£º
 1. ÏêÏ¸½éÉÜÑÐ¾¿ÉúÆÚ¼äµÄÐ¡ÂÛÎÄÏîÄ¿¡£
-
-
 3. Hashmap¡¢HashtableºÍcocurrentHashMapµÄÇø±ð£¬Òª½²³öËüÃÇ¸÷×ÔµÄÊµÏÖÔ­Àí²ÅÐÐ£¬±ÈÈçHashmapµÄÀ©ÈÝ»úÖÆ¡¢cocurrentHashMapµÄÍ°·Ö¸îÔ­Àí¡¢¶àÏß³Ì°²È«ÐÔ¡£
 4. ½ø³Ìµ÷¶ÈËã·¨£¬ÓÐÄÄÐ©Ëã·¨±È½ÏÄÑÊµÏÖ£¿
 5. linuxÏÂÈçºÎÐÞ¸Ä½ø³ÌÓÅÏÈ¼¶£¿£¨niceÃüÁîµÄÊ¹ÓÃ£©¡£
@@ -326,12 +180,10 @@ const float EPSINON = 0.00001;
 ÈýÃæ£¨1 hour and twenty minutes£©£º
 
 2. ×Ö·û´®ÖÐµÚÒ»¸öÖ»³öÏÖÒ»´ÎµÄ×Ö·û£¬ÈçºÎÓÅ»¯Ëã·¨Ê¹µÃ±éÀú´ÎÊý¸üÉÙ£¿
-
 3. socket±à³ÌÏà¹Ø£¬Èç¹û·þÎñÆ÷Õâ±ßµ÷ÓÃwriteÐ´ÁË100¸ö×Ö½ÚµÄÊý¾Ý£¬¿Í»§¶ËÏëÒª»ñµÃÕâ¸öÊý¾Ý£¬ÊÇÖ±½ÓÓÃreadÏµÍ³µ÷ÓÃ£¬²ÎÊýÒ²ÊÇ100Âð£¿
 4. °Ù¶ÈÐÂÎÅ»º´æÔ¤ËãÎÊÌâ£ºÒ»°ãÎªÁË×·ÇóÊ±¼äÐÔÄÜ£¬¶¼ÐèÒª»º´æÒ»Ð©ÐÂÎÅÊý¾Ý£¬ÄãÔõÃ´¼ÆËãËùÐèÔ¤Ëã£¿È»ºóÉêÇëÐèÒªµÄÖ÷»ú¡­¡­
 5. ¶àÏß³ÌµÄÊÊÓÃ³¡¾°ÊÇÊ²Ã´£¿ÎªÊ²Ã´ÒªÓÃ¶àÏß³Ì£¿
 
-7. ÎªÊ²Ã´¶Ô¼¼Êõ¸ÐÐËÈ¤£¬Ò»Ð©Ïà¹ØÎÊÌâÌÖÂÛ¡£
 
 ¢Ú°Ù¶È¼¼ÊõÀàÃæÊÔÌâ
 1¡¢ÊµÏÖÒ»¸öº¯Êý£¬¶ÔÒ»¸öÕýÕûÊýn£¬ËãµÃµ½1ÐèÒªµÄ×îÉÙ²Ù×÷´ÎÊý¡£²Ù×÷¹æÔòÎª£ºÈç¹ûnÎªÅ¼Êý£¬½«Æä³ýÒÔ2£»Èç¹ûnÎªÆæÊý£¬¿ÉÒÔ¼Ó1»ò¼õ1£»Ò»Ö±´¦ÀíÏÂÈ¥¡£
@@ -346,8 +198,8 @@ n/2 1
 2¡¢ÕÒµ½Âú×ãÌõ¼þµÄÊý×é
 ¸ø¶¨º¯Êýd(n)=n+nµÄ¸÷Î»Ö®ºÍ£¬nÎªÕýÕûÊý£¬Èçd(78)=78+7+8=93¡£ÕâÑùÕâ¸öº¯Êý¿ÉÒÔ¿´³ÉÒ»¸öÉú³ÉÆ÷£¬Èç93¿ÉÒÔ¿´³ÉÓÉ78Éú³É¡£
 ¶¨ÒåÊýA£ºÊýAÕÒ²»µ½Ò»¸öÊýB¿ÉÒÔÓÉd(B)=A£¬¼´A²»ÄÜÓÉÆäËûÊýÉú³É¡£ÏÖÔÚÒªÐ´³ÌÐò£¬ÕÒ³ö1ÖÁ10000ÀïµÄËùÓÐ·ûºÏÊýA¶¨ÒåµÄÊý¡£
-3¡¢Ò»¸ö´óµÄº¬ÓÐ50M¸öURLµÄ¼ÇÂ¼£¬Ò»¸öÐ¡µÄº¬ÓÐ500¸öURLµÄ¼ÇÂ¼£¬ÕÒ³öÁ½¸ö¼ÇÂ¼ÀïÏàÍ¬µÄURL¡£
-4¡¢º£Á¿ÈÕÖ¾Êý¾Ý£¬ÌáÈ¡³öÄ³ÈÕ·ÃÎÊ°Ù¶È´ÎÊý×î¶àµÄÄÇ¸öIP¡£
+
+
 5¡¢ÓÐ10¸öÎÄ¼þ£¬Ã¿¸öÎÄ¼þ1G£¬Ã¿¸öÎÄ¼þµÄÃ¿Ò»ÐÐ¶¼´æ·ÅµÄÊÇÓÃ»§µÄquery£¬Ã¿¸öÎÄ¼þµÄquery¶¼¿ÉÄÜÖØ¸´¡£ÈçºÎ°´ÕÕqueryµÄÆµ¶ÈÅÅÐò£¿
 6¡¢ÂìÒÏÅÀ¸ËÎÊÌâ
 ÓÐÒ»¸ù27ÀåÃ×³¤µÄÏ¸Ä¾¸Ë£¬ÔÚµÚ3ÀåÃ×£¬7ÀåÃ×£¬11ÀåÃ×£¬17ÀåÃ×£¬23ÀåÃ×ÕâÎå¸öÎ»ÖÃÉÏ¸÷ÓÐÒ»Ö»ÂìÒÏ£¬Ä¾¸ËºÜÏ¸£¬²»ÄÜÍ¬Ê±Í¨¹ýÁ½Ö»ÂìÒÏ£¬¿ªÊ¼Ê±£¬ÂìÒÏµÄÍ·³¯Ïò×ó»¹ÊÇÓÒÊÇÈÎÒâµÄ£¬ËûÃÇÖ»»á³¯Ç°×ß»òµôÍ·£¬µ«²»»áºóÍË£¬µ±Á½Ö»ÂìÒÏÏàÓöºó£¬ÂìÒÏ»áÍ¬Ê±µôÍ·³¯·´·½Ïò×ß£¬¼ÙÉèÂìÒÏÃÇÃ¿ÃëÖÓ¿ÉÒÔ×ß1ÀåÃ×µÄ¾àÀë¡£ÇóËùÓÐÂìÒÏ¶¼Àë¿ªÄ¾¸ËµÄ×îÐ¡Ê±¼äºÍ×î´óÊ±¼ä¡£
@@ -355,8 +207,7 @@ n/2 1
 8¡¢ÅÐ¶ÏÁ½¿ÃÊ÷ÊÇ·ñÏàµÈ£¬ÇëÊµÏÖÁ½¿ÃÊ÷ÊÇ·ñÏàµÈµÄ±È½Ï£¬ÏàµÈ·µ»Ø1£¬·ñÔò·µ»ØÆäËûÖµ£¬²¢ËµÃ÷Ëã·¨¸´ÔÓ¶È¡£
 9¡¢Èý¸ö¾¯²ìºÍÈý¸öÇôÍ½µÄ¹ýºÓÎÊÌâ
 Èý¸ö¾¯²ìºÍÈý¸öÇôÍ½¹²Í¬ÂÃÐÐ¡£Ò»ÌõºÓµ²×¡ÁËÈ¥Â·£¬ºÓ±ßÓÐÒ»Ìõ´¬£¬µ«ÊÇÃ¿´ÎÖ»ÄÜÔØ2ÈË¡£´æÔÚÈçÏÂµÄÎ£ÏÕ£ºÎÞÂÛÔÚºÓµÄÄÄ±ß£¬µ±ÇôÍ½ÈËÊý¶àÓÚ¾¯²ìµÄÈËÊýÊ±£¬½«ÓÐ¾¯²ì±»ÇôÍ½É±ËÀ¡£ÎÊÌâ£ºÇëÎÊÈçºÎÈ·¶¨¶ÉºÓ·½°¸£¬²ÅÄÜ±£Ö¤6ÈË°²È«ÎÞËðµÄ¹ýºÓ¡£
-10¡¢´Ó300Íò×Ö·û´®ÖÐÕÒµ½×îÈÈÃÅµÄ10Ìõ
-ËÑË÷µÄÊäÈëÐÅÏ¢ÊÇÒ»¸ö×Ö·û´®£¬Í³¼Æ300ÍòÊäÈëÐÅÏ¢ÖÐµÄ×îÈÈÃÅµÄÇ°10Ìõ£¬ÎÒÃÇÃ¿´ÎÊäÈëµÄÒ»¸ö×Ö·û´®Îª²»³¬¹ý255byte£¬ÄÚ´æÊ¹ÓÃÖ»ÓÐ1G¡£ÇëÃèÊöË¼Ïë£¬Ð´³öËã·¨£¨cÓïÑÔ£©£¬¿Õ¼äºÍÊ±¼ä¸´ÔÓ¶È¡£
+
 11¡¢ÈçºÎÕÒ³ö×ÖµäÖÐµÄÐÖµÜµ¥´Ê¡£¸ø¶¨Ò»¸öµ¥´Êa£¬Èç¹ûÍ¨¹ý½»»»µ¥´ÊÖÐ×ÖÄ¸µÄË³Ðò¿ÉÒÔµÃµ½ÁíÍâµÄµ¥´Êb£¬ÄÇÃ´¶¨ÒåbÊÇaµÄÐÖµÜµ¥´Ê¡£ÏÖÔÚ¸ø¶¨Ò»¸ö×Öµä£¬ÓÃ»§ÊäÈëÒ»¸öµ¥´Ê£¬ÈçºÎ¸ù¾Ý×ÖµäÕÒ³öÕâ¸öµ¥´ÊÓÐ¶àÉÙ¸öÐÖµÜµ¥´Ê£¿
 12¡¢ÕÒ³öÊý×éÖÐ³öÏÖ´ÎÊý³¬¹ýÒ»°ëµÄÊý£¬ÏÖÔÚÓÐÒ»¸öÊý×é£¬ÒÑÖªÒ»¸öÊý³öÏÖµÄ´ÎÊý³¬¹ýÁËÒ»°ë£¬ÇëÓÃO(n)µÄ¸´ÔÓ¶ÈµÄËã·¨ÕÒ³öÕâ¸öÊý¡£
 13¡¢ÕÒ³ö±»ÐÞ¸Ä¹ýµÄÊý×Ö
@@ -366,7 +217,7 @@ n¸ö¿Õ¼ä£¨ÆäÖÐn<1M£©£¬´æ·Åaµ½a+n-1µÄÊý£¬Î»ÖÃËæ»úÇÒÊý×Ö²»ÖØ¸´£¬aÎªÕýÇÒÎ´Öª¡£ÏÖÔÚµÚ
 15¡¢ÕÒ³ö¸ø¶¨×Ö·û´®¶ÔÓ¦µÄÐòºÅ¡£
 ÐòÁÐSeq=[a,b,¡­z,aa,ab¡­az,ba,bb,¡­bz,¡­,za,zb,¡­zz,aaa,¡­]ÀàËÆÓëexcelµÄÅÅÁÐ£¬ÈÎÒâ¸ø³öÒ»¸ö×Ö·û´®s=[a-z]+(ÓÉa-z×Ö·û×é³ÉµÄÈÎÒâ³¤¶È×Ö·û´®£©£¬ÇëÎÊsÊÇÐòÁÐSeqµÄµÚ¼¸¸ö¡£
 16¡¢ÕÒ³öµÚk´óµÄÊý×ÖËùÔÚµÄÎ»ÖÃ¡£Ð´Ò»¶Î³ÌÐò£¬ÕÒ³öÊý×éÖÐµÚk´óÐ¡µÄÊý£¬Êä³öÊýËùÔÚµÄÎ»ÖÃ¡£ÀýÈç{2£¬4£¬3£¬4£¬7}ÖÐ£¬µÚÒ»´óµÄÊýÊÇ7£¬Î»ÖÃÔÚ4¡£µÚ¶þ´ó¡¢µÚÈý´óµÄÊý¶¼ÊÇ4£¬Î»ÖÃÔÚ1¡¢3Ëæ±ãÊä³öÄÄÒ»¸ö¾ù¿É¡£
-17¡¢¸ø40ÒÚ¸ö²»ÖØ¸´µÄunsigned intµÄÕûÊý£¬Ã»ÅÅ¹ýÐòµÄ£¬È»ºóÔÙ¸ø¼¸¸öÊý£¬ÈçºÎ¿ìËÙÅÐ¶ÏÕâ¼¸¸öÊýÊÇ·ñÔÚÄÇ40ÒÚ¸öÊýµ±ÖÐ?
+17¡¢
 18¡¢ÔÚÒ»¸öÎÄ¼þÖÐÓÐ10G¸öÕûÊý£¬ÂÒÐòÅÅÁÐ£¬ÒªÇóÕÒ³öÖÐÎ»Êý¡£ÄÚ´æÏÞÖÆÎª2G¡£
 19¡¢Ê±·ÖÃëÕëÔÚÒ»ÌìÖ®ÀàÖØºÏ¶àÉÙ´Î£¿£¨24Ð¡Ê±£©
 20¡¢½«¶à¸ö¼¯ºÏºÏ²¢³ÉÃ»ÓÐ½»¼¯µÄ¼¯ºÏ¡£
