--- a/Document/只能建立的堆或者栈上的类.md
+++ b/Document/只能建立的堆或者栈上的类.md
@@ -24,7 +24,7 @@ https://blog.csdn.net/g5dsk/article/details/4775144
 	/*编译错误：  new的操作符，对 构造函数的要求是非私有 */
 
 所以唯一合理的方法是，将析构函数设置为私有。  
-原因：     
+原因：
 
     当对象建立在栈上面时，是由编译器分配内存空间的，调用构造函数来构造栈对象。当对象使用完后，编译器会调用析构函数来释放栈对象所占的空间。编译器管理了对象的整个生命周期。如果编译器无法调用类的析构函数，情况会是怎样的呢？比如，类的析构函数是私有的，编译器无法调用析构函数来释放内存。所以，编译器在为类对象分配栈空间时，会先检查类的析构函数的访问性，其实不光是析构函数，只要是非静态的函数，编译器都会进行检查。如果类的析构函数是私有的，则编译器不会在栈空间上为类对象分配内存。
       
@@ -65,7 +65,9 @@ https://blog.csdn.net/g5dsk/article/details/4775144
 
 上述方法的一个缺点就是，无法解决继承问题。
 
-如果A作为其它类的基类，则析构函数通常要设为virtual，然后在子类重写，以实现多态。因此析构函数不能设为private。还好C++提供了第三种访问控制，protected。将析构函数设为protected可以有效解决这个问题，类外无法访问protected成员，子类则可以访问。
+如果A作为其它类的基类，则析构函数通常要设为virtual，然后在子类重写，以实现多态。
+
+因此析构函数不能设为private。还好C++提供了第三种访问控制，protected。将析构函数设为protected可以有效解决这个问题，类外无法访问protected成员，子类则可以访问。
        另一个问题是，类的使用很不方便，使用new建立对象，却使用destory函数释放对象，而不是使用delete。（使用delete会报错，因为delete对象的指针，会调用对象的析构函数，而析构函数类外不可访问）这种使用方式比较怪异。为了统一，可以将构造函数设为protected，然后提供一个public的static函数来完成构造，这样不使用new，而是使用一个函数来构造，使用一个函数来析构。代码如下，类似于单例模式：
 
 	class OnlyHeapClass {
