--- a/Document/大数计算.md
+++ b/Document/大数计算.md
@@ -9,14 +9,10 @@ https://blog.csdn.net/wenqiang1208/article/details/69669084
 
 (1)最直观的的解决办法，把所有的数据遍历一遍，找出那个数.
 注意：这个方法是不可取的，因为把所有数据遍历一遍，要把所有的数据加载到内存中，16G的数据可能内存存储不下。
-
 (2)基于第一种方法，内存加载不了16G的数据，就可以考虑到 外部排序：归并排序的方法，先将一部分数据加载到内存中，然后查找。
-
 (3)可以考虑使用位图bitmap，1个bit存储一个数字，那么40亿数据需要40亿bit 大约就是500M内存。
-
 用一个bit位来表示这个数据是否存在，1表示存在，0表示不存在。
 时间复杂度为O(n) ? + 查找时间O(1)。
-
 (4)这个问题在《编程珠玑》里有很好的描述，大家可以参考下面的思路，探讨一下：
 
 又因为2^32为40亿多，所以给定一个数可能在，也可能不在其中；
@@ -62,20 +58,31 @@ https://blog.csdn.net/wenqiang1208/article/details/69669084
 关键是如何做hash，对string做hash，要减少碰撞频率。
 #问题 五 一个大的含有50M个URL的记录，一个小的含有500个URL的记录，找出两个记录里相同的URL
 
-首先使用包含500个url的文件创建一个hash_set。
-然后遍历50M的url记录，如果url在hash_set中，则输出此url并从hash_set中删除这个url。
-所有输出的url就是两个记录里相同的url。
+	首先使用包含500个url的文件创建一个hash_set。
+	然后遍历50M的url记录，如果url在hash_set中，则输出此url并从hash_set中删除这个url。
+	所有输出的url就是两个记录里相同的url。
 
 
-#问题 6  海量日志数据，提取出某日访问百度次数最多的那个IP
-首先是这一天，并且是访问百度的日志中的IP取出来，逐个写入到一个大文件中。注意到IP是32位的，最多有个2^32个IP。同样可以采用映射的方法，比如模1000，把整个大文件映射为1000个小文件，再找出每个小文中出现频率最大的IP（可以采用hash_map进行频率统计，然后再找出频率最大的几个）及相应的频率。然后再在这1000个最大的IP中，找出那个频率最大的IP，即为所求。
+#问题 6 一个网站有 海量日志数据，提取出某日访问该网站次数最多的那个IP
+首先是这一天，并且是访问百度的日志中的IP取出来，逐个写入到一个大文件中。
+
+	注意到IP是32位的，最多有个2^32个IP。
+
+同样可以采用映射的方法，比如模1000，把整个大文件映射为1000个小文件，
+
+再找出每个小文中出现频率最大的IP（可以采用hash_map进行频率统计，然后再找出频率最大的几个）及相应的频率。
+然后再在这1000个最大的IP中，找出那个频率最大的IP，即为所求。
 或者如下阐述（雪域之鹰）：
-算法思想：分而治之+Hash
-1、IP地址最多有2^32=4G种取值情况，所以不能完全加载到内存中处理；
-2、可以考虑采用分而治之的思想，按照IP地址的Hash(IP) % 1024值，把海量IP日志分别存储到1024个小文件中，这样，每个小文件最多包含4MB个IP地址；
-        这里解释一下为什么用Hash(IP) % 1024值，如果不用，而直接分类的话，可能会出现这样一种情况，就是有个IP在每个小文件中都存在，而且这个IP并不一定在那个小文件中是数量最多的，那么最终可能选择的结果会有问题，所以这里用了Hash(IP)%1024值，这样的话，通过计算IP的Hash值，相同IP肯定会放到一个文件中，当然了不同的IP的Hash值也可能相同，就存在一个小文件中。
-3、对于每一个小文件，可以构建一个IP为key，出现的次数为value的Hash Map，同时记录当前出现次数最多的那个IP地址；
-4、可以得到1024个小文件中的出现次数最多的那个IP，再依据常规的排序算法得出总体上出现次数最多的IP。
+
+算法思想：分而治之+Hash：
+
+	1、IP地址最多有2^32=4G种取值情况，所以不能完全加载到内存中处理；
+	2、可以考虑采用分而治之的思想，按照IP地址的Hash(IP) % 1024值，把海量IP日志分别存储到1024个小文件中，这样，每个小文件最多包含4MB个IP地址；
+	        这里解释一下为什么用Hash(IP) % 1024值，如果不用，而直接分类的话，可能会出现这样一种情况，就是有个IP在每个小文件中都存在，而且这个IP并不一定在那个小文件中是数量最多的，那么最终可能选择的结果会有问题，所以这里用了Hash(IP)%1024值，这样的话，通过计算IP的Hash值，相同IP肯定会放到一个文件中，当然了不同的IP的Hash值也可能相同，就存在一个小文件中。
+	3、对于每一个小文件，可以构建一个IP为key，出现的次数为value的Hash Map，同时记录当前出现次数最多的那个IP地址；
+	4、可以得到1024个小文件中的出现次数最多的那个IP，再依据常规的排序算法得出总体上出现次数最多的IP。
+
+
 
 #问题七 从300万字符串中找到最热门的10条
 搜索的输入信息是一个字符串，统计300万输入信息中的最热门的前10条，我们每次输入的一个字符串为不超过255byte，内存使用只有1G。请描述思想，写出算法（c语言），空间和时间复杂度。
@@ -88,8 +95,9 @@ https://blog.csdn.net/wenqiang1208/article/details/69669084
 	
 300万个字符串最多（假设没有重复，都是最大长度）占用内存3M*1K/4=0.75G。所以可以将所有字符串都存放在内存中进行处理。 
 
-     1  可以使用key为字符串（事实上是字符串的hash值），值为字符串出现次数的hash来统计每个每个字符串出现的次数。	
-     2 用一个长度为10的数组/链表来存储目前出现次数最多的10个字符串。 
+  
+	  1  可以使用key为字符串（事实上是字符串的hash值），值为字符串出现次数的hash来统计每个每个字符串出现的次数。	
+	  2 用一个长度为10的数组/链表来存储目前出现次数最多的10个字符串。 
 
 这样空间和时间的复杂度都是O(n)。
 
