--- a/ModelTest/设计原则2.md
+++ b/ModelTest/设计原则2.md
@@ -1,4 +1,13 @@
 #目标  高内聚，低耦合
+
+
+	#单一职责原则:
+	#里氏替换原则
+	#依赖倒置原则
+	#接口隔离原则
+	#迪米特法则
+	#开闭原则
+
 # 单一职责原则:
 定义：不要存在多于一个导致类变更的原因。通俗的说，即一个类只负责一项职责。 
 问题由来：类T负责两个不同的职责：职责P1，职责P2。当由于职责P1需求发生改变而需要修改类T时，有可能会导致原本运行正常的职责P2功能发生故障。
@@ -21,8 +30,6 @@
 继承作为面向对象三大特性之一，在给程序设计带来巨大便利的同时，也带来了弊端。比如使用继承会给程序带来侵入性，程序的可移植性降低，增加了对象间的耦合性，如果一个类被其他的类所继承，则当这个类需要修改时，必须考虑到所有的子类，并且父类修改后，所有涉及到子类的功能都有可能会产生故障。
 
 #依赖倒置原则
-
-设计模式六大原则（3）：依赖倒置原则
 
 定义：高层模块不应该依赖低层模块，二者都应该依赖其抽象；抽象不应该依赖细节；细节应该依赖抽象。
 
