--- a/Document/成员变量的初始化顺序.md
+++ b/Document/成员变量的初始化顺序.md
@@ -1,6 +1,4 @@
 http://www.cnblogs.com/Murcielago/p/4187567.html
-
-
 有些成员变量的数据类型比较特别，它们的初始化方式也和普通数据类型的成员变量有所不同。这些特殊的类型的成员变量包括：
 
 	a.引用
@@ -42,3 +40,29 @@ http://www.cnblogs.com/Murcielago/p/4187567.html
 		
 
 《c++ primer 第四版本 12.4 构造函数》
+
+
+
+
+class A
+{
+	private:
+	int n1;
+	int n2
+	public:
+	A():n2(0),n1(n2+2)
+	{
+	}
+	
+	void Print
+	{
+		cout<< n1 <<n2 ;
+	}
+}
+
+输出： n1 不确定 ，n2 0
+
+原因，初始化顺序，只和声明顺序有关， 先初始化n1 ,因为n1=n2+2, 初始化n2,n2初始化也不固定，所以 n1的值不固定
+
+接着初始化n2 n2初始化为0 ，得出答案。
+
