--- a/Document/大数计算.md
+++ b/Document/大数计算.md
@@ -102,3 +102,16 @@ https://blog.csdn.net/wenqiang1208/article/details/69669084
 这样空间和时间的复杂度都是O(n)。
 
 # 问题8 给40亿个不重复的unsigned int的整数，没排过序的，然后再给几个数，如何快速判断这几个数是否在那40亿个数当中?
+
+
+#有两个字符串数组： string src[]  和 string des[] ，每个字符串数组的长度都是10W跳左右，每个字符的 size<1KB ，设计一个算法 查找 两个字符串数组中想交的字符串。
+
+解析方法：
+
+分析 10W = 2^20  1KB*10W*2 = 2GB ，当今的内存中正好可以容下这么多数据，算法设计
+
+（1）遍历字符串数组src，构造一个 tire tree（字典数），然后遍历字符串数组des遇到已经存储过的相同的结构则输出。
+
+（2）设计一个hash，关键是哈希算法的设计，因为这是一个字符串数组，每个字符都是有范围的(0~25)，我们可以字符串数组中的每个字符串看成一个26进制的数，将其转化为10进制，这样就可以得到一个唯一的key值，对于字符串太长的情况下，我们可以将这个字符串对10万取模，对10万取模后，我们并不能保证这个key唯一，这样我们就需要key值冲突处理，参考以下四种处理方式：http://blog.csdn.net/leo115/article/details/8052353
+
+说明：同样可以直接使用string类型的字符串作为 hash key，每个string的ASCII码是不同的，所以具有唯一性，故可以直接作为 hash key。
