--- a/Document/问题.md
+++ b/Document/问题.md
@@ -30,6 +30,15 @@ select和 poll epoll
 https://blog.csdn.net/forDreamYue/article/details/51714404
 
 
+
+三次握手， 
+new的三种用法
+union和struct
+linux底层的一些实现
+const成员函数是不是修饰
+lambda表达式 的优势
+virtual的虚指针
+
 【校招面试】大量面经总结，校招生看过来
 https://www.jianshu.com/p/e88096056e73
 
