--- a/Document/重载重写重定义.md
+++ b/Document/重载重写重定义.md
@@ -1,6 +1,35 @@
 C++继承中重载、重写、重定义的区别：
 #重载overload：是函数名相同，参数列表不同 重载只是在类的内部存在。但是不能靠返回类型来判断。
 
+const 成员函数的重载问题：
+
+const 成员函数也算重载，起本质是c++编译的时候的符号修饰：
+
+
+	class A
+	{
+	        public:
+	                A(){}
+	                int a;
+	        public:
+	                int Get() { return  a;}
+	                int Get() const { return a;};
+	};
+	
+	int main()
+	{
+	
+	A a;
+	a.Get();
+	
+	const A b;
+	b.Get();
+	return 0;
+	}
+
+	pcrf@pcrf:~$ nm a.out |grep Get
+	00000000000006d8 W _ZN1A3GetEv
+	00000000000006e8 W _ZNK1A3GetEv
 
 #重写override：也叫做覆盖。
 子类重新定义父类中有相同名称和参数的虚函数。函数特征相同。但是具体实现不同，主要是在继承关系中出现的 。
