--- a/Document/大数计算.md
+++ b/Document/大数计算.md
@@ -64,6 +64,8 @@ https://blog.csdn.net/wenqiang1208/article/details/69669084
 
 
 #问题 6 一个网站有 海量日志数据，提取出某日访问该网站次数最多的那个IP
+2、上千万条记录，统计出重复记录最多的前N条。
+
 首先是这一天，并且是访问百度的日志中的IP取出来，逐个写入到一个大文件中。
 
 	注意到IP是32位的，最多有个2^32个IP。
