--- a/Document/宏定义和内联函数的区别.md
+++ b/Document/宏定义和内联函数的区别.md
@@ -18,8 +18,13 @@
 频繁的调用内联函数和宏定义容易造成代码膨胀，消耗更大的内存而造成过多的换页操作。
 
 
-内联函数是代码被插入到调用者代码处的函数。如同 #define 宏，内联函数通过避免被调用的开销来提高执行效率，尤其是它能够通过调用（“过程化集成”）被编译器优化。 宏定义不检查函数参数，返回值什么的，只是展开，相对来说，内联函数会检查参数类型，所以更安全。
+内联函数是代码被插入到调用者代码处的函数。
+如同 #define 宏，内联函数通过避免被调用的开销来提高执行效率，
+尤其是它能够通过调用（“过程化集成”）被编译器优化。 
 
-	内联函数和宏很类似，而区别在于，宏是由预处理器对宏进行替代，而内联函数是通过编译器控制来实现的。
+宏定义不检查函数参数，返回值什么的，只是展开，相对来说，内联函数会检查参数类型，所以更安全。
+
+	内联函数和宏很类似，而区别在于，宏是由预处理器对宏进行替代，
+	而内联函数是通过编译器控制来实现的。
 	而且内联函数是真正的函数，只是在需要用到的时候，内联函数像宏一样的展开，所以取消了函数的参数压栈，减少了调用的开销。
 	你可以象调用函数一样来调用内联函数，而不必担心会产生于处理宏的一些问题。 
