--- a/Document/项目介绍.md
+++ b/Document/项目介绍.md
@@ -30,7 +30,8 @@ https://blog.csdn.net/miaozhenzhong/article/details/52469982
 
 5、项目的管理
 
-如果是项目负责人，可以谈一谈项目进度如何安排的，遇到时间上、人员上的问题如何解决，这一部分不仅可以考察人的管理能力，也可以考察人的团队合作能力。
+如果是项目负责人，可以谈一谈项目进度如何安排的，遇到时间上、人员上的问题如何解决，
+这一部分不仅可以考察人的管理能力，也可以考察人的团队合作能力。
 
 
 6、突出你的责任心
