--- a/Document/初始化问题和成员变量的初始化顺序.md
+++ b/Document/初始化问题和成员变量的初始化顺序.md
@@ -1,3 +1,7 @@
+#内置类型 
+ 未被显式初始化。则其值，由位置决定，函数外的 被初始化为0 ，函数内的则是未定义。
+
+
 http://www.cnblogs.com/Murcielago/p/4187567.html
 有些成员变量的数据类型比较特别，它们的初始化方式也和普通数据类型的成员变量有所不同。这些特殊的类型的成员变量包括：
 
