--- a/Document/指针和引用的区别.md
+++ b/Document/指针和引用的区别.md
@@ -1,4 +1,17 @@
-指针和引用的区别是什么？
+
+#理解含义
+
+
+	int * ptr [10]
+	int (* parray) [10]
+	int (& refarray) [10]
+
+
+	int ai ={0,1,2,3,4}
+	auto pa( &ai[0])
+	
+
+#指针和引用的区别是什么？
 
 （1）指针是一个变量，操作系统需要为指针变量本身分配内存空间，同时，这个变量里面存储的是一个地址，这个地址指向内存中的一个存储单元。
 引用只是一个变量的别名，操作系统不为它分配存储空间，它和被绑定的变量共用一块内存空间。
