--- a/DataStrutAndAlgo/Backtracking/排列组合的回溯.md
+++ b/DataStrutAndAlgo/Backtracking/排列组合的回溯.md
@@ -1,1 +1,6 @@
 https://www.cnblogs.com/mozi-song/p/9579418.html
+
+
+
+全排列（Permutation）以及next_permutation
+https://www.cnblogs.com/eudiwffe/p/6260699.html
