--- a/Document/大数计算.md
+++ b/Document/大数计算.md
@@ -1,7 +1,6 @@
 https://blog.csdn.net/wenqiang1208/article/details/69669084
 
-### 问题1 
-	问题描述：给40亿个不重复的unsigned int的整数，没排过序的，然后再给一个数，如何快速判断这个数是否在那40亿个数当中？
+# 问题1 给40亿个不重复的unsigned int的整数，没排过序的，然后再给一个数，如何快速判断这个数是否在那40亿个数当中？
 
 问题分析：40亿 ?不重复 ，没有排序。
 
@@ -21,7 +20,7 @@ https://blog.csdn.net/wenqiang1208/article/details/69669084
 
 然后将这40亿个数分成两类:
      
-      1.最高位为0
+     1.最高位为0
 	 2.最高位为1
 
 并将这两类分别写入到两个文件中，其中一个文件中数的个数<=20亿，而另一个>=20亿（这相当于折半了）；
@@ -41,14 +40,17 @@ https://blog.csdn.net/wenqiang1208/article/details/69669084
 	
 
 	
-## 问题2  100亿个数，求最大的1万个数，并说出算法的时间复杂度。
+# 问题2  100亿个数，求最大的1万个数，并说出算法的时间复杂度。
+
 用小根堆来实现。注意是小根堆，
 读入1万个数，然后做
 时间复杂度是O（NlogK）
 
 
-## 问题三 找出1-10w中没有出现的两个数字。
-1） 位图，申请10w个bit的空间，每个bit代表一个数字是否出现过。开始时将这10w个bit都初始化为0，表示所有数字都没有出现过。然后依次读入已经打乱循序的数字，并将对应的bit设为1。当处理完所有数字后，根据为0的bit得出没有出现的数字。
+# 问题三 找出1-10w中没有出现的两个数字。
+1） 位图，申请10w个bit的空间，每个bit代表一个数字是否出现过。
+
+开始时将这10w个bit都初始化为0，表示所有数字都没有出现过。然后依次读入已经打乱循序的数字，并将对应的bit设为1。当处理完所有数字后，根据为0的bit得出没有出现的数字。
 
 2） 首先计算1到10w的和，平方和。然后计算给定数字的和，平方和。两次的到的数字相减，可以得到这两个数字的和，平方和。所以我们有x + y = n x^2 + y^2 = m 解方程可以得到x和y的值。
 
@@ -56,7 +58,9 @@ https://blog.csdn.net/wenqiang1208/article/details/69669084
 #问题四  有千万个string在内存怎么高速查找，插入和删除？？？
 对千万个string做hash，可以实现高速查找，找到了，插入和删除就很方便了。
 关键是如何做hash，对string做hash，要减少碰撞频率。
-#问题 五 一个大的含有50M个URL的记录，一个小的含有500个URL的记录，找出两个记录里相同的URL
+
+
+#问题五  一个大的含有50M个URL的记录，一个小的含有500个URL的记录，找出两个记录里相同的URL
 
 	首先使用包含500个url的文件创建一个hash_set。
 	然后遍历50M的url记录，如果url在hash_set中，则输出此url并从hash_set中删除这个url。
@@ -103,10 +107,8 @@ https://blog.csdn.net/wenqiang1208/article/details/69669084
 
 这样空间和时间的复杂度都是O(n)。
 
-# 问题8 给40亿个不重复的unsigned int的整数，没排过序的，然后再给几个数，如何快速判断这几个数是否在那40亿个数当中?
 
-
-#有两个字符串数组： string src[]  和 string des[] ，每个字符串数组的长度都是10W跳左右，每个字符的 size<1KB ，设计一个算法 查找 两个字符串数组中想交的字符串。
+#问题八  有两个字符串数组： string src[]  和 string des[]，每个字符串数组的长度都是10W跳左右，每个字符的 size<1KB ，设计一个算法 查找 两个字符串数组中想交的字符串。
 
 解析方法：
 
